--- a/gb/19/8/30/n11487194.md
+++ b/gb/19/8/30/n11487194.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/opgoqe307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/opgoqe307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/opgoqe307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/opgoqe307/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/opgoqe307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/opgoqe307/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/opgoqe307/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/opgoqe307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>提供7种纽约公共交通资讯 谷歌推出“Pigeon”手机APP</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年08月30日讯】（大纪元记者黄小堂纽约报导）纽约地铁的故障或维修时有所闻，让搭乘地铁的民众不得不改搭巴士或火车。28日，<ahref="https://github.com/opgoqe307/djy/blob/master/gb/tag/%E8%B0%B7%E6%AD%8C.md#1">谷歌</a>内部（孵化器）团队Area 120宣布，去年推出的<ahref="https://github.com/opgoqe307/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA.md#1">手机</a>应用程式：Pigeon，现在正式开放给所有纽约民众，并扩展到所有纽约交通服务，提供即时资讯，包含地铁、巴士、火车和渡轮。</p>
-<figure id="11487198" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/08/0a88208414b199a2b40ef76f895a719d-450x253.jpg" alt="民众使用“Pigeon”手机应用程式可回馈通勤时遭遇的状况，让其他使用者知晓。" width="500" /><figcaption class="wp-caption-text">民众使用“Pigeon”<ahref="https://github.com/opgoqe307/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA.md#1">手机</a>应用程式可回馈通勤时遭遇的状况，让其他使用者知晓。（合成图片）</figcaption></figure>
+<p>【大纪元2019年08月30日讯】（大纪元记者黄小堂纽约报导）纽约地铁的故障或维修时有所闻，让搭乘地铁的民众不得不改搭巴士或火车。28日，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B0%B7%E6%AD%8C.md#1">谷歌</a>内部（孵化器）团队Area 120宣布，去年推出的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA.md#1">手机</a>应用程式：Pigeon，现在正式开放给所有纽约民众，并扩展到所有纽约交通服务，提供即时资讯，包含地铁、巴士、火车和渡轮。</p>
+<figure id="11487198" aria-describedby="caption-11487198" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/08/0a88208414b199a2b40ef76f895a719d-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/08/0a88208414b199a2b40ef76f895a719d-450x253.jpg" alt="民众使用“Pigeon”手机应用程式可回馈通勤时遭遇的状况，让其他使用者知晓。" width="500" /></a><figcaption id="caption-11487198" class="wp-caption-text">民众使用“Pigeon”<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA.md#1">手机</a>应用程式可回馈通勤时遭遇的状况，让其他使用者知晓。（合成图片）</figcaption></figure>
 <p>Area 120去年9月推出的交通应用程式：Pigeon，仅提供地铁资讯。28日，他们宣布这款Pigeon应用程序已整合了巴士、渡轮、北线铁路（Metro North）、长岛铁路（LIRR）、新泽西运输线（NJ Transit）和PATH铁路等7种交通模式。</p>
-<figure id="11487197" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/08/97773c1aaf7d596115bbb396a218f943-450x303.jpg" alt="图为“Pigeon”手机应用程序在Apple Store上的简介。" width="500" /><figcaption class="wp-caption-text">图为“Pigeon”手机应用程序在Apple Store上的简介。（取自Apple Store网页）</figcaption></figure>
+<figure id="11487197" aria-describedby="caption-11487197" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/08/97773c1aaf7d596115bbb396a218f943-450x303.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/08/97773c1aaf7d596115bbb396a218f943-450x303.jpg" alt="图为“Pigeon”手机应用程序在Apple Store上的简介。" width="500" /></a><figcaption id="caption-11487197" class="wp-caption-text">图为“Pigeon”手机应用程序在Apple Store上的简介。（取自Apple Store网页）</figcaption></figure>
 <p>大都会运输署发言人塔雷克（Shams Tarek）表示，他们也在推出自己的“MYmta”应用程式，欢迎任何可靠的平台为通勤者提供准确的交通资讯。</p>
 <p>“藉由Pigeon使用者即时回馈公共交通的资讯，Pigeon一直在寻求最佳方式，让纽约人更容易从A点到B点。”Pigeon联合创办人Laura Rokita在声明中表示。他说，Pigeon可提供“MYmta”应用程式所没有的资讯。</p>
 <p>使用Pigeon的乘客可在火车上回馈延误、拥挤、空车或改道的资讯；也可在月台上回报人群拥挤状况、封闭的车站入口，以及故障的电梯、手扶梯和售票机；针对其他不容易分类的问题，应用程式还有一个杂项（Misc）的类别，可拍照回报包括“（推荐）地铁表演者”、“太热（空调状况）”等遇到的五花八门的通勤状况，不用再等其他善心人士告诉你地铁发生了什么问题。</p>
@@ -22,48 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/17/2/14/n8808634.md#1">纽约遭遇强风 多处公共交通受影响</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/17/10/31/n9787725.md#1">纽约公共交通“可持续性”排首位</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/17/12/20/n9974301.md#1">西雅图公共交通运载人次增长迅速</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/2/25/n10170481.md#1">公共交通便利   宾大名列全美高校第一</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/3/5/n10193379.md#1">华府地区“公共交通评分”下降</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/8/24/n10662789.md#1">法雷挑战陆天娜  承诺改善纽约公共交通</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/19/3/6/n11092335.md#1">市议长提地铁和公交 由纽约市掌管</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/19/6/4/n11298929.md#1">西雅图公共交通在全美排名第六</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/15/n12403597.md#1">创新低 周六阳性检测率0.24%</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/14/n12401153.md#1">川普幕僚朱利安尼的儿子欲参选纽约市长</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/14/n8808634.md#1">纽约遭遇强风 多处公共交通受影响</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/31/n9787725.md#1">纽约公共交通“可持续性”排首位</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/20/n9974301.md#1">西雅图公共交通运载人次增长迅速</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/2/25/n10170481.md#1">公共交通便利   宾大名列全美高校第一</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/5/n10193379.md#1">华府地区“公共交通评分”下降</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/24/n10662789.md#1">法雷挑战陆天娜  承诺改善纽约公共交通</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/6/n11092335.md#1">市议长提地铁和公交 由纽约市掌管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/4/n11298929.md#1">西雅图公共交通在全美排名第六</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680082.md#1">民调：逾六成纽约选民指现存保释法损害治安</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680079.md#1">纽约市华社联署撑修改保释法 还差两百人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12401109.md#1">【薇羽看世间】一代奸相周恩来（上）</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/8/10/n12319003.md#1">【命理】身居高位却在晚年被斩首的命</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12400573.md#1">【新闻第一现场】“9?11”改变世界 美誓言永不忘记</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12399670.md#1">【大选观察】拜登真的是“北京拜登”吗？</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/12/n12399440.md#1">【新闻看点】党内造反！习中央连下狠手</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/12/n12399042.md#1">陈时中登小巨蛋飙唱 詹雅雯夸歌声有男子气魄</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12400838.md#1">与成龙有关？吴绮莉自曝女儿有已故兄弟姐妹</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/10/n12395386.md#1">黄子韬痛失最强靠山 52岁富豪父亲病逝</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12401048.md#1">为同父异母妹妹加油 孙俪获邓超妇唱夫和</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12401224.md#1">杨颖和黄晓明穿情侣装 补税风波后首度放闪</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/13/n12400181.md#1">川普所说中俄都不知道的核武 可能是指这个</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/11/n12397483.md#1">掉发原因有3种！中医4招防掉发 长回浓密黑发</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/11/n12397119.md#1">摆脱慢性疲劳 周末用“手机断食法”给大脑排毒</a></li>
-<li><a href="https://github.com/opgoqe307/djy/blob/master/gb/20/9/12/n12398766.md#1">飓风过后 美国路州蚊子多到杀死几百头牲畜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/opgoqe307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/opgoqe307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/30/n11487194.htm">提供7种纽约公共交通资讯 谷歌推出“Pigeon”手机APP</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/30/n11487194.htm">提供7种纽约公共交通资讯 谷歌推出“Pigeon”手机APP</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/opgoqe307/djy/blob/master/gb/19/8/30/n11487194.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/opgoqe307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/opgoqe307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/opgoqe307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/opgoqe307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opgoqe307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/8/30/n11487194.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
